--- a/visualinspection/package.json
+++ b/visualinspection/package.json
@@ -9,9 +9,12 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-html5video": "^2.5.1",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.0.1",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
